# mac-app-uninstaller

./: .gitignore  .prettierignore  CLAUDE.md  Cargo.toml  README.md  eslint.config.js  index.html  package.json  svg-to-icns.sh  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  TAURI_MIGRATION.md  UI.md
resources/: icon_dark.icns
src/: App.tsx  core.rs  index.css  main.rs  osx.rs  style.rs  types.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs  progress.rs
src-tauri/src/core/: apps.rs  mod.rs  plist_info.rs  related.rs  running.rs  trash.rs
src/components/: apps-sidebar.tsx  detail-panel.tsx  header.tsx  uninstall-confirm.tsx
src/components/ui/: alert-dialog.tsx  checkbox.tsx  sonner.tsx
src/hooks/: use-app-size.ts  use-is-truncated.ts
src/lib/: styles.ts  tauri.ts  utils.ts
src/lib/api/: uninstaller.ts
src/stores/: uninstaller.ts
src/types/: models.ts
src/ui/: color.rs  list.rs  mod.rs  tasks.rs
src/ui/panels/: bottom.rs  central.rs  mod.rs  side.rs  top.rs
