[package]
name = "app_uninstaller"
version = "1.0.0"
edition = "2024"

[package.metadata.bundle]
name = "App Uninstaller"
identifier = "day.nhanh.appuninstaller"
icon = ["resources/icon.icns"]


[dependencies]
eframe = "0.32"
egui = "0.32"
sysinfo = "0.37"
plist = "1.7"
trash = "5.2"
home = "0.5"
anyhow = "1.0"
walkdir = "2.5"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
