[package]
name = "app-uninstaller"
version = "1.1.0"
description = "List installed macOS .app bundles, find related files, and move them to the Trash."
authors = ["An Nguyen"]
license = "MIT"
edition = "2024"
rust-version = "1.85"

[lib]
name = "app_uninstaller_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
anyhow = "1.0"
home = "0.5"
plist = "1.7"
trash = "5.2"
walkdir = "2.5"
sysinfo = "0.37"
